turtleart.lessons.turtleart.Main.Polygon7.scala.error
Source:5: error: ')' expected but '}' found.
	 droite(180-(128+4/7)}
                             ^